🚀 (.github/workflows/publish-docker.yml): Add new GitHub Actions workflow for building and pushing Docker images 🔧 (src/Dockerfile): Update Dockerfile to support multiple architectures during build ✨ (.github/workflows/publish-docker.yml): Add steps to tag Docker images with commit SHA and branch name for better version tracking

--- a/src/Dockerfile
+++ b/src/Dockerfile
@@ -7,7 +7,15 @@ ENV ROOTFS=/root-out
 ENV REL=v3.20
 
 # build argument for architecture
-ARG ARCH=x86_64
+ARG TARGETPLATFORM
+RUN echo "Building for platform: ${TARGETPLATFORM}"
+RUN case ${TARGETPLATFORM} in \
+      "linux/amd64") ARCH="x86_64";; \
+      "linux/arm64") ARCH="aarch64";; \
+      "linux/s390x") ARCH="s390x";; \
+      *) echo "Unsupported platform"; exit 1;; \
+    esac
+
 ENV ARCH=${ARCH}
 
 ENV MIRROR=http://dl-cdn.alpinelinux.org/alpine
@@ -35,7 +43,7 @@ RUN \
 
 # set version for s6 overlay
 ARG S6_OVERLAY_VERSION="v3.1.6.2"
-ARG S6_OVERLAY_ARCH="x86_64"
+ARG S6_OVERLAY_ARCH=${ARCH}
 
 # copy s6 overlay from assets directory
 COPY assets/s6-overlay/s6-overlay-noarch-${S6_OVERLAY_VERSION}.tar.xz /tmp/s6-overlay-noarch-${S6_OVERLAY_VERSION}.tar.xz
