--- a/.github/workflows/publish-docker.yml
+++ b/.github/workflows/publish-docker.yml
@@ -66,5 +66,4 @@ jobs:
           push: true
           platforms: linux/amd64,linux/arm64,linux/s390x
           tags: ${{ env.TAGS }}
-          build-args: |
-            TARGETPLATFORM=${{ matrix.platform }}
+          build-args: TARGETARCH=${{ matrix.arch }}
