--- a/.github/workflows/publish-docker.yml
+++ b/.github/workflows/publish-docker.yml
@@ -7,9 +7,11 @@ on:
       - '**'
 
 jobs:
-  linux-build-and-push:
-    name: 🐧 Docker Build and Push
+  build-and-push:
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        platform: [amd64, arm64, s390x]
 
     steps:
       - name: 🔍 Checkout Repository
@@ -64,5 +66,7 @@ jobs:
           context: ./src
           file: ./src/Dockerfile
           push: true
-          platforms: linux/amd64,linux/arm64,linux/s390x
+          platforms: linux/${{ matrix.platform }}
           tags: ${{ env.TAGS }}
+          build-args: |
+            ARCH=${{ matrix.platform }}
