--- a/.github/workflows/publish-docker.yml
+++ b/.github/workflows/publish-docker.yml
@@ -14,53 +14,51 @@ jobs:
         platform: [amd64, arm64, s390x]
 
     steps:
-      - name: 🔍 Checkout Repository
+      - name: Checkout repository
         uses: actions/checkout@v4
 
-      - name: 🛠️ Setup QEMU
+      - name: Set up QEMU
         uses: docker/setup-qemu-action@v3
 
-      - name: 🛠️ Setup Docker Buildx
+      - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
-      - name: 🖥️ Login to DockerHub
+      - name: Log in to DockerHub
         uses: docker/login-action@v3
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_TOKEN }}
 
-      - name: 🏷️ Fetch Commit SHA
+      - name: Fetch Commit SHA
         run: echo "SHA_SHORT=$(git rev-parse --short HEAD)" >> $GITHUB_ENV
 
-      - name: 🏷️ Extract Branch Name
+      - name: Extract Branch Name
         run: echo "BRANCH_NAME=$(echo ${GITHUB_REF#refs/heads/})" >> $GITHUB_ENV
 
-      - name: 🏷️ ENV Variables
+      - name: ENV Variables
         run: |
           source $GITHUB_ENV
           echo "BRANCH_NAME: ${BRANCH_NAME}"
           echo "SHA_SHORT: ${SHA_SHORT}"
           echo "GITHUB_REF_NAME: ${GITHUB_REF_NAME}"
 
-      - name: 🏷️ Define Tags
+      - name: Define Tags
         run: |
           source $GITHUB_ENV
-          # Always set the default tags
           DEFAULT_TAGS="dublok/base-linux:alpine-${GITHUB_REF_NAME},dublok/base-linux:alpine-${SHA_SHORT}"
           echo "TAGS=${DEFAULT_TAGS}" >> $GITHUB_ENV
           
-          # Check if GITHUB_REF_NAME starts with 'v' and if so, append 'latest'
           if [[ $GITHUB_REF_NAME == v* ]]; then
             LATEST_TAGS="${DEFAULT_TAGS},dublok/base-linux:alpine-latest"
             echo "TAGS=${LATEST_TAGS}" >> $GITHUB_ENV
           fi
 
-      - name: 🏷️ Tags
+      - name: Tags
         run: |
           source $GITHUB_ENV
           echo "TAGS: ${TAGS}"
 
-      - name: 🛠️ Build and Push Docker Images
+      - name: Build and Push Docker Images
         uses: docker/build-push-action@v5.0.0
         with:
           context: ./src
@@ -69,4 +67,4 @@ jobs:
           platforms: linux/${{ matrix.platform }}
           tags: ${{ env.TAGS }}
           build-args: |
-            ARCH=${{ matrix.platform }}
+            TARGETPLATFORM=linux/${{ matrix.platform }}
