🔧 (publish-docker.yml): Limit docker build platforms to amd64 only for faster build times and to avoid compatibility issues

--- a/.github/workflows/publish-docker.yml
+++ b/.github/workflows/publish-docker.yml
@@ -11,7 +11,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        platform: [amd64, arm64, s390x]
+        platform: [amd64] # arm64, s390x
 
     steps:
       - name: Checkout repository
