🔧 (Dockerfile): Add echo statements for build variables to improve debugging and traceability 💡 (Dockerfile): Comment out echo statement for MIRROR variable as it's not necessary for debugging

--- a/src/Dockerfile
+++ b/src/Dockerfile
@@ -19,6 +19,12 @@ RUN case ${TARGETPLATFORM} in \
 
 ENV ARCH=${ARCH}
 
+RUN echo "Building for platform: ${TARGETPLATFORM}"
+RUN echo "Architecture set to: ${ARCH}"
+RUN echo "RootFS set to: ${ROOTFS}"
+RUN echo "Alpine release set to: ${REL}"
+# RUN echo "Mirror set to: ${MIRROR}"
+
 ENV MIRROR=http://dl-cdn.alpinelinux.org/alpine
 ENV PACKAGES=alpine-baselayout,\
 alpine-keys,\
