--- a/src/Dockerfile
+++ b/src/Dockerfile
@@ -10,9 +10,9 @@ ENV REL=v3.20
 ARG TARGETPLATFORM
 RUN echo "Building for platform: ${TARGETPLATFORM}" && \
     case ${TARGETPLATFORM} in \
-      "linux/amd64") ARCH="x86_64";; \
-      "linux/arm64") ARCH="aarch64";; \
-      "linux/s390x") ARCH="s390x";; \
+      "amd64") ARCH="x86_64";; \
+      "arm64") ARCH="aarch64";; \
+      "s390x") ARCH="s390x";; \
       *) echo "Unsupported platform"; exit 1;; \
     esac && \
     echo "ARCH=${ARCH}" > /etc/environment
