--- a/.github/workflows/publish-docker-v2.yml
+++ b/.github/workflows/publish-docker-v2.yml
@@ -48,10 +48,10 @@ jobs:
         run: |
           source $GITHUB_ENV
           TEMP_TAGS="dublok/base-linux:${{ env.BaseOS }}-${{ matrix.platform }}-${BRANCH_NAME}-${SHA_SHORT},dublok/base-linux:${{ env.BaseOS }}-${{ matrix.platform }}-${BRANCH_NAME},dublok/base-linux:${{ env.BaseOS }}-${{ matrix.platform }}-${SHA_SHORT}"
-          echo "TAGS=${TEMP_TAGS}" >> $GITHUB_ENV
+          echo "TEMP_TAGS=${TEMP_TAGS}" >> $GITHUB_ENV
 
           DEFAULT_TAGS="dublok/base-linux:${{ env.BaseOS }}-${GITHUB_REF_NAME},dublok/base-linux:${{ env.BaseOS }}-${SHA_SHORT}"
-          echo "TAGS=${DEFAULT_TAGS}" >> $GITHUB_ENV
+          echo "DEFAULT_TAGS=${DEFAULT_TAGS}" >> $GITHUB_ENV
           
           if [[ $GITHUB_REF_NAME == v* ]]; then
           DEFAULT_TAGS="${DEFAULT_TAGS},dublok/base-linux:${{ env.BaseOS }}-latest"
@@ -61,7 +61,8 @@ jobs:
       - name: Tags
         run: |
           source $GITHUB_ENV
-          echo "TAGS: ${TAGS}"
+          echo "DEFAULT_TAGS: ${DEFAULT_TAGS}"
+          echo "TEMP_TAGS: ${TEMP_TAGS}"
           
       - name: Set Build Args
         run: |
