--- a/.github/workflows/publish-docker-v2.yml
+++ b/.github/workflows/publish-docker-v2.yml
@@ -87,38 +87,33 @@ jobs:
           tags: ${{ env.TEMP_TAGS }}
           build-args: ${{ env.BUILD_ARGS }}
 
-      - name: Set output
-        run: echo "::set-output name=temp_tags::$TEMP_TAGS"
-        id: tag_output
-
-    outputs:
-        temp_tags: ${{ steps.tag_output.outputs.temp_tags }}
-
   create-and-push-manifest:
     needs: build-and-push
     runs-on: ubuntu-latest
     steps:
-      - name: TEMP_TAGS
+
+      - name: Fetch Commit SHA
+        run: echo "SHA_SHORT=$(git rev-parse --short HEAD)" >> $GITHUB_ENV
+
+      - name: Fetch Tags from Docker Hub
         run: |
-            TEMP_TAGS="${{ needs.build-and-push.outputs.temp_tags }}"
-            TAGS_ARRAY=(${TEMP_TAGS//,/ })
-            for i in "${TAGS_ARRAY[@]}"; do
-              echo "TAG: $i"
-            done
-            
+          SHA_SHORT=$(git rev-parse --short HEAD)
+          # Assuming use of a Docker Hub API endpoint to fetch tags; this is hypothetical
+          RESPONSE=$(curl -s -H "Authorization: Bearer ${{ secrets.DOCKER_TOKEN }}" "https://hub.docker.com/v2/repositories/dublok/base-linux/tags?name=$SHA_SHORT")
+          TAGS=$(echo $RESPONSE | jq -r '.results[].name')
+          echo "Fetched tags: $TAGS"
 
+    #   - name: Log in to DockerHub
+    #     uses: docker/login-action@v3
+    #     with:
+    #       username: ${{ secrets.DOCKER_USERNAME }}
+    #       password: ${{ secrets.DOCKER_TOKEN }}
 
-      - name: Log in to DockerHub
-        uses: docker/login-action@v3
-        with:
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_TOKEN }}
-
-      - name: Create and Push Docker Manifest
-        run: |
-          DOCKER_CLI_EXPERIMENTAL=enabled docker manifest create ***/base-linux:alpine-latest \
-            --amend dublok/base-linux:alpine-amd64-${{ github.sha }} \
-            --amend dublok/base-linux:alpine-arm64-${{ github.sha }}
-          DOCKER_CLI_EXPERIMENTAL=enabled docker manifest push ***/base-linux:alpine-latest
-        shell: /usr/bin/bash -e {0}
+    #   - name: Create and Push Docker Manifest
+    #     run: |
+    #       DOCKER_CLI_EXPERIMENTAL=enabled docker manifest create ***/base-linux:alpine-latest \
+    #         --amend dublok/base-linux:alpine-amd64-${{ github.sha }} \
+    #         --amend dublok/base-linux:alpine-arm64-${{ github.sha }}
+    #       DOCKER_CLI_EXPERIMENTAL=enabled docker manifest push ***/base-linux:alpine-latest
+    #     shell: /usr/bin/bash -e {0}
         
