🐛 (publish-docker-v2.yml): Fix Docker manifest creation command to correctly append tags ✨ (publish-docker-v2.yml): Add condition to skip Docker manifest creation if no tags are fetched, preventing potential errors

--- a/.github/workflows/publish-docker-v2.yml
+++ b/.github/workflows/publish-docker-v2.yml
@@ -122,13 +122,17 @@ jobs:
       - name: Create and Push Docker Manifest
         run: |
             BRANCH_NAME=${{ env.BRANCH_NAME }}
+            if [ -n "$TAGS" ]; then
             MANIFEST_CMD="docker manifest create dublok/base-linux:alpine-$BRANCH_NAME"
             for tag in $TAGS; do
-            MANIFEST_CMD+=" --amend dublok/base-linux:${tag}"
+                MANIFEST_CMD+=" --amend ${tag}"
             done
             echo "Running command: $MANIFEST_CMD"
             DOCKER_CLI_EXPERIMENTAL=enabled $MANIFEST_CMD
             DOCKER_CLI_EXPERIMENTAL=enabled docker manifest push dublok/base-linux:alpine-$BRANCH_NAME
+            else
+            echo "No tags fetched. Skipping docker manifest creation."
+            fi
         shell: /usr/bin/bash -e {0}
 
     #   - name: Log in to DockerHub
